Implement SQLite database support, add Student management pages, and update navigation links

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-d4d5d017-c2d0-4ddb-8662-aa19a84b4471;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolContextSQLite": "Data Source=CU.db"
   }
 }
